Makes windowserver not send messages during shutdown

To send messages during shutdown means clients may process messages in
weird order. The windowserver should not send any messages during
shutdown. The client can detect connection loss and take whatever
action is appropriate.

It may be we want a specific message to indicate the windowserver is going
down normally vs a crash, but for now I'm only making it so no
messages are sent.

BUG=648435
TEST=covered by test
R=sadrul@chromium.org

Review-Url: https://codereview.chromium.org/2352893002
Cr-Commit-Position: refs/heads/master@{#419670}

Former-commit-id: 20e6c7ecccbcd292abc95fe906bd987cf9cb2bf2